# llama-llist

./: .gitignore  README.md  update.md  update_readme.md
.claude/: settings.local.json
backend/: notes.db.backup  requirements.txt
backend/app/: crud.py  database.py  local_ai.py  main.py  models.py  schemas.py
backend/app/routers/: ai.py  files.py  notes.py  settings.py  tags.py  templates.py  todos.py
frontend/LlamaLlistApp/: build-profile.json5
frontend/LlamaLlistApp/entry/: build-profile.json5
frontend/LlamaLlistApp/entry/src/main/: module.json5
frontend/LlamaLlistApp/entry/src/main/cpp/: CMakeLists.txt  keyword_napi.cpp  keyword_napi.h  markdown_engine.cpp  markdown_engine.h
frontend/LlamaLlistApp/entry/src/main/ets/common/constants/: Theme.ets  ThemeManager.ets
frontend/LlamaLlistApp/entry/src/main/ets/common/native/: KeywordNative.ets  MarkdownNative.ets
frontend/LlamaLlistApp/entry/src/main/ets/common/network/: httpClient.ets
frontend/LlamaLlistApp/entry/src/main/ets/entryability/: EntryAbility.ets
frontend/LlamaLlistApp/entry/src/main/ets/models/: Note.ets  Todo.ets
frontend/LlamaLlistApp/entry/src/main/ets/pages/: Index.ets  NoteEdit.ets  SearchPage.ets  SplashPage.ets  TagManage.ets  TodoBoard.ets
frontend/LlamaLlistApp/entry/src/main/resources/base/element/: string.json
frontend/LlamaLlistApp/entry/src/main/resources/base/profile/: main_pages.json
frontend/LlamaLlistApp/entry/src/ohosTest/ets/test/: Ability.test.ets
